<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft= "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin"
    android:background="@color/mypurple"
    xmlns:tools = "http://schemas.android.com/tools"
    tools:context = ".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="304dp"
        android:layout_height="250dp"

        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:contentDescription="@string/desc1"/>

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="273dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="55sp" />

    <EditText
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/email1"
        android:hint = "@string/hint1"
        android:importantForAutofill="no"
        android:textSize="28sp"
        android:inputType="text"
        android:focusable = "true"
        android:textColorHighlight = "@color/white"
        android:textColorHint = "@color/white"
        android:textColor="@color/white"
        android:layout_marginTop = "150dp"
        android:layout_below = "@+id/logo"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="28sp"
        android:ems="10"
        android:id="@+id/password1"
        android:layout_below="@+id/email1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/email1"
        android:layout_alignEnd="@+id/email1"
        android:textColorHint="@color/white"
        android:textColorHighlight = "@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:hint="@string/hint2"
        android:importantForAutofill="no"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/btnsignin1"
        android:layout_below="@id/password1"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/myyellow"
        android:textColor="@color/mypurple"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_button"
        android:id="@+id/btnsignup1"
        android:layout_below="@id/btnsignin1"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/myyellow"
        android:textColor="@color/mypurple"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

</RelativeLayout>
</ScrollView>