<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft= "@dimen/activity_horizontal_margin"
        android:paddingRight = "@dimen/activity_horizontal_margin"
        android:paddingTop = "@dimen/activity_vertical_margin"
        android:paddingBottom = "@dimen/activity_vertical_margin"

        android:background="@color/mypurple"
        xmlns:tools = "http://schemas.android.com/tools"
        tools:context = ".RegisterActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="304dp"
            android:layout_height="250dp"

            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"
            android:contentDescription="@string/desc1"/>

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="260dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="55sp" />

        <EditText
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:id = "@+id/firstname"
            android:hint = "Firstname"
            android:textSize="28sp"
            android:inputType="text"
            android:focusable = "true"
            android:textColorHighlight = "@color/white"
            android:textColorHint = "@color/white"
            android:textColor="@color/white"
            android:layout_marginTop = "100dp"
            android:layout_below = "@+id/logo"
            android:layout_alignParentLeft = "true"
            android:layout_alignParentStart = "true"
            android:layout_alignParentRight = "true"
            android:layout_alignParentEnd = "true" />


        <EditText
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:id = "@+id/lastname"

            android:hint = "Lastname"
            android:textSize="28sp"
            android:inputType="text"
            android:focusable = "true"
            android:textColorHighlight = "@color/white"
            android:textColorHint = "@color/white"
            android:textColor="@color/white"
            android:layout_marginTop = "20dp"
            android:layout_below = "@+id/firstname"
            android:layout_alignParentLeft = "true"
            android:layout_alignParentStart = "true"
            android:layout_alignParentRight = "true"
            android:layout_alignParentEnd = "true" />
        <EditText
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:id = "@+id/email"
            android:hint = "Email"
            android:textSize="28sp"
            android:inputType="textEmailAddress"
            android:focusable = "true"
            android:textColorHighlight = "@color/white"
            android:textColorHint = "@color/white"
            android:textColor="@color/white"
            android:layout_marginTop = "20dp"
            android:layout_below = "@+id/lastname"
            android:layout_alignParentLeft = "true"
            android:layout_alignParentStart = "true"
            android:layout_alignParentRight = "true"
            android:layout_alignParentEnd = "true" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="28sp"
            android:ems="10"
            android:id="@+id/password"
            android:layout_below="@+id/email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/email"
            android:layout_alignEnd="@+id/email"
            android:textColorHint="@color/white"
            android:textColorHighlight = "@color/white"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:hint="@string/hint2" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="28sp"
            android:ems="10"
            android:id="@+id/repassword"
            android:layout_below="@+id/password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/password"
            android:layout_alignEnd="@+id/password"
            android:textColorHint="@color/white"
            android:textColorHighlight = "@color/white"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:hint="@string/hint3" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:id="@+id/btnsignup"
            android:layout_below="@id/repassword"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/myyellow"
            android:textColor="@color/mypurple"
            android:layout_marginTop="40dp"
            android:textSize="20sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account"
            android:id="@+id/btnsignin"
            android:layout_below="@id/btnsignup"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/myyellow"
            android:textColor="@color/mypurple"
            android:layout_marginTop="20dp"
            android:textSize="20sp"/>

    </RelativeLayout>
</ScrollView>